--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     stages {
-        stage('Example') {
+        stage('jenkins') {
             steps {
                echo "Running ${sudo docker-compose up}"
             }
